--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,3 +23,10 @@ jobs:
     - name: Compilation
       run: |
          export ODIMRA_USER_ID=2021; export ODIMRA_GROUP_ID=2021; ./build_images.sh.
+         if [ $? eq 0 ]; 
+         then
+          echo "PluginCiscoACI build success"
+         else
+          echo "PluginCiscoACI build failed"
+          exit1
+         fi
