--- a/.github/workflows/build_unittest.yml
+++ b/.github/workflows/build_unittest.yml
@@ -11,7 +11,7 @@
 #WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 #License for the specific language governing permissions and limitations
 # under the License.
-name: build
+name: build_unittest
 on:
   workflow_dispatch:  
 jobs:
@@ -26,8 +26,17 @@ jobs:
          ./build_images.sh.
          if [ $? eq 0 ]; 
          then
-          echo "PluginCiscoACI build success"
+          echo "PluginCiscoACI build is successful"
          else
           echo "PluginCiscoACI build failed"
           exit1
          fi
+    - name: Test
+      run: |
+        GORACE=history_size=7 go test ./... --cover
+        if [ $? -eq 0 ]; then
+              echo Unit Testing is Successful !!!!
+        else
+              echo Unit Testing Failed !!!!
+        fi
+     
