--- a/.github/workflows/build_unittest.yml
+++ b/.github/workflows/build_unittest.yml
@@ -13,6 +13,9 @@
 # under the License.
 name: build_unittest
 on:
+  pull_request:
+    branches:
+      - '**'
   workflow_dispatch:  
 jobs:
   build:
