--- a/.github/workflows/build_unittest.yml
+++ b/.github/workflows/build_unittest.yml
@@ -25,7 +25,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Compilation
       run: |
-         export ODIMRA_USER_ID=2021; export ODIMRA_GROUP_ID=2021 
+         export ODIMRA_USER_ID=2021; export ODIMRA_GROUP_ID=2021
+         ls -lrt
+         pwd
          ./build_images.sh.
          if [ $? eq 0 ]; 
          then
