--- a/.github/workflows/build_unittest.yml
+++ b/.github/workflows/build_unittest.yml
@@ -25,7 +25,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Compilation
       run: |
-         export ODIMRA_USER_ID=2021; export ODIMRA_GROUP_ID=2021;./build_images.sh.
+         export ODIMRA_USER_ID=2021; export ODIMRA_GROUP_ID=2021
+         ./build_images.sh
          if [ $? eq 0 ]; 
          then
           echo "PluginCiscoACI build is successful"
